Se agrego un carousel de productos en cards

--- a/src/App.css
+++ b/src/App.css
@@ -13,6 +13,10 @@
   padding: 0px;
 }
 
+.color-footer{
+  background-color: #e6e7e6;
+}
+
 .icono-redes {
   background-color: #212529;
   color: #ffffff;
