--- a/src/App.css
+++ b/src/App.css
@@ -70,3 +70,10 @@ h4 {
   margin-bottom: 20px;
 }
 
+.img-css {
+  height: 300px;
+  width: 100%;
+  object-fit: cover;
+  border-radius: 6px;
+  box-shadow: 0 4px 8px rgba(0, 0, 0, 0.3);
+}
