--- a/src/index.css
+++ b/src/index.css
@@ -7,3 +7,84 @@ flex-direction: column;
 main{
     flex-grow: 1;
 }
+
+
+* {
+  margin: 0px;
+  padding: 0px;
+}
+
+main {
+  background-color: #f8f9fa;
+}
+
+.nav-pri {
+  background-color: #e6e7e6;
+  font-size: 17px;
+}
+.nav-sec {
+  background-color: #0e6856;
+  padding: 0px;
+}
+
+.color-footer {
+  background-color: #e6e7e6;
+}
+
+.icono-redes {
+  background-color: #212529; 
+  color: #ffffff;
+  border-radius: 50%;
+  width: 45px;
+  height: 45px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+
+/*Grid para cards de productos*/
+.grid-container {
+  display: grid;
+  grid-template-columns: repeat(auto-fill, minmax(210px, 1fr));
+  gap: 1rem;
+  padding: 1rem 0;
+}
+
+/*Mual de Redes Instagran*/
+.instagram-section {
+  background-color: #f8f9fa;
+  text-align: center;
+  padding: 50px 0;
+}
+
+.mural {
+  max-width: 600px;
+  margin: 0 auto;
+}
+
+h4 {
+  font-size: 24px;
+  font-weight: bold;
+  color: #333;
+  margin: 0;
+}
+
+.bi- {
+  font-size: 30px;
+  margin-right: 10px;
+}
+
+.p-mural {
+  font-size: 18px;
+  color: #6c757d;
+  margin-top: 10px;
+  margin-bottom: 20px;
+}
+
+.img-css {
+  height: 300px;
+  width: 100%;
+  object-fit: cover;
+  border-radius: 6px;
+  box-shadow: 0 4px 8px rgba(0, 0, 0, 0.3);
+}
