--- a/src/Components/EstilosCards.css
+++ b/src/Components/EstilosCards.css
@@ -12,13 +12,15 @@
   border: 1px solid #ddd;
   border-radius: 5px;
   overflow: hidden;
-  transition: box-shadow 0.5s ease-in-out;
+  transition: box-shadow 0.7s ease-in-out, transform 0.7s ease-in-out; 
   height: 100%;
   user-select: none;
+  box-shadow: 0 4px 12px rgba(0, 0, 0, 0.3);
 }
 
 .product-card:hover {
-  box-shadow: 0 4px 12px rgba(0, 0, 0, 0.6);
+  box-shadow: 0 4px 12px rgba(0, 0, 0, 0.8);
+  transform: translateY(-5px);
 }
 
 /* Imagen superior de la tarjeta */
@@ -26,7 +28,6 @@
   object-fit: cover;
   height: 200px;
 }
-
 
 /* Precio principal */
 .price-main {
@@ -53,10 +54,16 @@
   color: #666;
 }
 
-/* Borde superior personalizado */
 .bod-top {
   border-top: 4px solid rgba(24, 21, 21, 0.671);
+  transition: border-color 0.2s ease-in-out, box-shadow 0.2s ease-in-out;
 }
+
+.bod-top:hover {
+  border-top: 4px solid rgba(32, 88, 32, 0.8);
+  box-shadow: 0 -2px 8px rgba(32, 88, 32, 0.5); /* brillo sutil desde arriba */
+}
+
 
 
 /*                  2. BOTONES                         */
