--- a/src/Components/EstilosCards.css
+++ b/src/Components/EstilosCards.css
@@ -12,7 +12,7 @@
   border: 1px solid #ddd;
   border-radius: 5px;
   overflow: hidden;
-  transition: box-shadow 0.7s ease-in-out, transform 0.7s ease-in-out; 
+  transition: box-shadow 0.7s ease-in-out, transform 0.7s ease-in-out;
   height: 100%;
   user-select: none;
   box-shadow: 0 4px 12px rgba(0, 0, 0, 0.3);
@@ -21,6 +21,12 @@
 .product-card:hover {
   box-shadow: 0 4px 12px rgba(0, 0, 0, 0.8);
   transform: translateY(-5px);
+}
+
+/* Hover del borde cuando la card está en hover */
+.product-card:hover .bod-top {
+  border-top: 4px solid rgba(32, 88, 32, 0.8);
+  box-shadow: 0 -2px 8px rgba(32, 88, 32, 0.5);
 }
 
 /* Imagen superior de la tarjeta */
@@ -61,10 +67,8 @@
 
 .bod-top:hover {
   border-top: 4px solid rgba(32, 88, 32, 0.8);
-  box-shadow: 0 -2px 8px rgba(32, 88, 32, 0.5); /* brillo sutil desde arriba */
+  box-shadow: 0 -2px 8px rgba(32, 88, 32, 0.5);
 }
-
-
 
 /*                  2. BOTONES                         */
 
